# metal4pyscf

./: METAL_PORT.md  README.md  pyproject.toml
docs/: SGX_GRADIENT_DESIGN.md
gpu4pyscf/: __config__.py  __init__.py  _patch_pyscf.py
gpu4pyscf/cc/: __init__.py
gpu4pyscf/df/: __init__.py  df_jk_metal.py
gpu4pyscf/df/grad/: df_grad_metal.py
gpu4pyscf/dft/: __init__.py  numint_metal.py  rks.py  uks.py
gpu4pyscf/grad/: __init__.py  _cpu_fallback.py
gpu4pyscf/hessian/: __init__.py  _cpu_fallback.py
gpu4pyscf/lib/: __init__.py  backend.py  diis.py  logger.py  utils.py
gpu4pyscf/lib/backends/: __init__.py  cupy_backend.py  mlx_backend.py  numpy_backend.py
gpu4pyscf/lib/backends/tests/: conftest.py  test_backend_chemistry.py  test_backend_unit.py
gpu4pyscf/lib/metal_kernels/: __init__.py  eval_ao.py  fused_xc.py  int3c2e_ip1.py  int3c2e_ip1_v2.py  rys_jk.py  rys_jk_metal.py
gpu4pyscf/md/: __init__.py
gpu4pyscf/mp/: __init__.py
gpu4pyscf/nac/: __init__.py
gpu4pyscf/pbc/: __init__.py
gpu4pyscf/properties/: __init__.py
gpu4pyscf/qmmm/: __init__.py
gpu4pyscf/scf/: __init__.py  hf.py  uhf.py
gpu4pyscf/solvent/: __init__.py
gpu4pyscf/tdscf/: __init__.py
gpu4pyscf/tools/: __init__.py
tests/: conftest.py  test_dft.py  test_grad.py  test_hessian.py  test_imports.py  test_posthf.py  test_scf.py  test_solvent.py  test_tddft.py
