[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu4pyscf-metal"
version = "1.6.1"
description = "Apple Silicon Metal GPU acceleration for PySCF (fork of gpu4pyscf)"
readme = "METAL_PORT.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "pyscf>=2.8.0",
    "pyscf-dispersion",
    "geometric",
    "mlx>=0.18",
    "numpy",
    "scipy",
    "h5py",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["gpu4pyscf*"]
exclude = ["*test*", "*examples*", "*docker*"]

[tool.setuptools.package-data]
"gpu4pyscf.lib.metal_kernels" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["gpu4pyscf/lib/backends/tests"]
addopts = "--import-mode=importlib"
